Login wiw is ready . . .

--- a/LoginSystemWithRepositoryAndUnitOfWorkPattern/LoginSystemWithRepositoryAndUnitOfWorkPattern.csproj
+++ b/LoginSystemWithRepositoryAndUnitOfWorkPattern/LoginSystemWithRepositoryAndUnitOfWorkPattern.csproj
@@ -94,5 +94,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataAccess\" />
+    <Folder Include="Domain\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
